@@ -1,5 +1,5 @@
 /*
- * Copyright (C) 2018 Velocity Contributors
+ * Copyright (C) 2018-2023 Velocity Contributors
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -22,13 +22,11 @@ import com.velocitypowered.api.proxy.Player;
 import com.velocitypowered.api.proxy.ProxyServer;
 import com.velocitypowered.api.proxy.crypto.IdentifiedKey;
 import com.velocitypowered.api.proxy.player.ChatSession;
-import com.velocitypowered.api.proxy.player.TabList;
 import com.velocitypowered.api.proxy.player.TabListEntry;
 import com.velocitypowered.api.util.GameProfile;
 import com.velocitypowered.proxy.connection.MinecraftConnection;
 import com.velocitypowered.proxy.connection.client.ConnectedPlayer;
-import com.velocitypowered.proxy.protocol.packet.HeaderAndFooter;
-import com.velocitypowered.proxy.protocol.packet.LegacyPlayerListItem;
+import com.velocitypowered.proxy.protocol.packet.LegacyPlayerListItemPacket;
 import com.velocitypowered.proxy.protocol.packet.chat.RemoteChatSession;
 import java.util.ArrayList;
 import java.util.Collection;
@@ -42,6 +40,9 @@ import java.util.concurrent.ConcurrentHashMap;
 import net.kyori.adventure.text.Component;
 import org.checkerframework.checker.nullness.qual.Nullable;
 
+/**
+ * Exposes the tab list to plugins.
+ */
 public class KeyedVelocityTabList implements InternalTabList {
 
   protected final ConnectedPlayer player;
@@ -58,6 +59,11 @@ public class KeyedVelocityTabList implements InternalTabList {
     this.connection = player.getConnection();
   }
 
+  @Override
+  public Player getPlayer() {
+    return player;
+  }
+
   @Deprecated
   @Override
   public void setHeaderAndFooter(Component header, Component footer) {
@@ -68,7 +74,7 @@ public class KeyedVelocityTabList implements InternalTabList {
 
   @Override
   public void clearHeaderAndFooter() {
-    connection.write(HeaderAndFooter.reset());
+    this.player.clearPlayerListHeaderAndFooter();
   }
 
   @Override
@@ -81,9 +87,10 @@ public class KeyedVelocityTabList implements InternalTabList {
     Preconditions.checkArgument(entry instanceof KeyedVelocityTabListEntry,
         "Not a Velocity tab list entry");
 
-    LegacyPlayerListItem.Item packetItem = LegacyPlayerListItem.Item.from(entry);
+    LegacyPlayerListItemPacket.Item packetItem = LegacyPlayerListItemPacket.Item.from(entry);
     connection.write(
-        new LegacyPlayerListItem(LegacyPlayerListItem.ADD_PLAYER, Collections.singletonList(packetItem)));
+        new LegacyPlayerListItemPacket(LegacyPlayerListItemPacket.ADD_PLAYER,
+            Collections.singletonList(packetItem)));
     entries.put(entry.getProfile().getId(), (KeyedVelocityTabListEntry) entry);
   }
 
@@ -93,9 +100,10 @@ public class KeyedVelocityTabList implements InternalTabList {
 
     TabListEntry entry = entries.remove(uuid);
     if (entry != null) {
-      LegacyPlayerListItem.Item packetItem = LegacyPlayerListItem.Item.from(entry);
+      LegacyPlayerListItemPacket.Item packetItem = LegacyPlayerListItemPacket.Item.from(entry);
       connection.write(
-          new LegacyPlayerListItem(LegacyPlayerListItem.REMOVE_PLAYER, Collections.singletonList(packetItem)));
+          new LegacyPlayerListItemPacket(LegacyPlayerListItemPacket.REMOVE_PLAYER,
+              Collections.singletonList(packetItem)));
     }
 
     return Optional.ofNullable(entry);
@@ -107,10 +115,15 @@ public class KeyedVelocityTabList implements InternalTabList {
     return entries.containsKey(uuid);
   }
 
+  @Override
+  public Optional<TabListEntry> getEntry(UUID uuid) {
+    return Optional.ofNullable(this.entries.get(uuid));
+  }
+
   /**
-   * Clears all entries from the tab list. Note that the entries are written with {@link
-   * MinecraftConnection#delayedWrite(Object)}, so make sure to do an explicit {@link
-   * MinecraftConnection#flush()}.
+   * Clears all entries from the tab list. Note that the entries are written with
+   * {@link MinecraftConnection#delayedWrite(Object)}, so make sure to do an explicit
+   * {@link MinecraftConnection#flush()}.
    */
   @Override
   public void clearAll() {
@@ -118,12 +131,18 @@ public class KeyedVelocityTabList implements InternalTabList {
     if (listEntries.isEmpty()) {
       return;
     }
-    List<LegacyPlayerListItem.Item> items = new ArrayList<>(listEntries.size());
+    List<LegacyPlayerListItemPacket.Item> items = new ArrayList<>(listEntries.size());
     for (TabListEntry value : listEntries) {
-      items.add(LegacyPlayerListItem.Item.from(value));
+      items.add(LegacyPlayerListItemPacket.Item.from(value));
     }
+    clearAllSilent();
+    connection.delayedWrite(new LegacyPlayerListItemPacket(
+            LegacyPlayerListItemPacket.REMOVE_PLAYER, items));
+  }
+
+  @Override
+  public void clearAllSilent() {
     entries.clear();
-    connection.delayedWrite(new LegacyPlayerListItem(LegacyPlayerListItem.REMOVE_PLAYER, items));
   }
 
   @Override
@@ -133,56 +152,45 @@ public class KeyedVelocityTabList implements InternalTabList {
 
   @Override
   public TabListEntry buildEntry(GameProfile profile,
-                                 net.kyori.adventure.text.@Nullable Component displayName,
-                                 int latency, int gameMode, @Nullable IdentifiedKey key) {
+      net.kyori.adventure.text.@Nullable Component displayName,
+      int latency, int gameMode, @Nullable IdentifiedKey key) {
     return new KeyedVelocityTabListEntry(this, profile, displayName, latency, gameMode, key);
   }
 
   @Override
-  public TabListEntry buildEntry(GameProfile profile, @Nullable Component displayName, int latency, int gameMode,
-                                 @Nullable ChatSession chatSession, boolean listed) {
+  public TabListEntry buildEntry(GameProfile profile, @Nullable Component displayName, int latency,
+      int gameMode, @Nullable ChatSession chatSession, boolean listed) {
     return new KeyedVelocityTabListEntry(this, profile, displayName, latency, gameMode,
         chatSession == null ? null : chatSession.getIdentifiedKey());
   }
 
   @Override
-  public void processLegacy(LegacyPlayerListItem packet) {
+  public TabListEntry buildEntry(GameProfile profile, @Nullable Component displayName, int latency,
+                                 int gameMode, @Nullable ChatSession chatSession, boolean listed, int listOrder, boolean showHat) {
+    return buildEntry(profile, displayName, latency, gameMode, chatSession, listed);
+  }
+
+  @Override
+  public void processLegacy(LegacyPlayerListItemPacket packet) {
     // Packets are already forwarded on, so no need to do that here
-    for (LegacyPlayerListItem.Item item : packet.getItems()) {
+    for (LegacyPlayerListItemPacket.Item item : packet.getItems()) {
       UUID uuid = item.getUuid();
       assert uuid != null : "1.7 tab list entry given to modern tab list handler!";
 
-      if (packet.getAction() != LegacyPlayerListItem.ADD_PLAYER && !entries.containsKey(uuid)) {
+      if (packet.getAction() != LegacyPlayerListItemPacket.ADD_PLAYER
+              && !entries.containsKey(uuid)) {
         // Sometimes UPDATE_GAMEMODE is sent before ADD_PLAYER so don't want to warn here
         continue;
       }
 
       switch (packet.getAction()) {
-        case LegacyPlayerListItem.ADD_PLAYER: {
+        case LegacyPlayerListItemPacket.ADD_PLAYER: {
           // ensure that name and properties are available
           String name = item.getName();
           List<GameProfile.Property> properties = item.getProperties();
           if (name == null || properties == null) {
             throw new IllegalStateException("Got null game profile for ADD_PLAYER");
           }
-          /* why are we verifying the key here - multi-proxy setups break this
-          // Verify key
-          IdentifiedKey providedKey = item.getPlayerKey();
-          Optional<Player> connected = proxyServer.getPlayer(uuid);
-          if (connected.isPresent()) {
-            IdentifiedKey expectedKey = connected.get().getIdentifiedKey();
-            if (providedKey != null) {
-              if (!Objects.equals(expectedKey, providedKey)) {
-                throw new IllegalStateException("Server provided incorrect player key in playerlist for "
-                    + name + " UUID: " + uuid);
-              }
-            } else {
-              // Substitute the key
-              // It shouldn't be propagated to remove the signature.
-              providedKey = expectedKey;
-            }
-          }
-           */
 
           entries.putIfAbsent(item.getUuid(), (KeyedVelocityTabListEntry) TabListEntry.builder()
               .tabList(this)
@@ -194,24 +202,24 @@ public class KeyedVelocityTabList implements InternalTabList {
               .build());
           break;
         }
-        case LegacyPlayerListItem.REMOVE_PLAYER:
+        case LegacyPlayerListItemPacket.REMOVE_PLAYER:
           entries.remove(uuid);
           break;
-        case LegacyPlayerListItem.UPDATE_DISPLAY_NAME: {
+        case LegacyPlayerListItemPacket.UPDATE_DISPLAY_NAME: {
           KeyedVelocityTabListEntry entry = entries.get(uuid);
           if (entry != null) {
             entry.setDisplayNameInternal(item.getDisplayName());
           }
           break;
         }
-        case LegacyPlayerListItem.UPDATE_LATENCY: {
+        case LegacyPlayerListItemPacket.UPDATE_LATENCY: {
           KeyedVelocityTabListEntry entry = entries.get(uuid);
           if (entry != null) {
             entry.setLatencyInternal(item.getLatency());
           }
           break;
         }
-        case LegacyPlayerListItem.UPDATE_GAMEMODE: {
+        case LegacyPlayerListItemPacket.UPDATE_GAMEMODE: {
           KeyedVelocityTabListEntry entry = entries.get(uuid);
           if (entry != null) {
             entry.setGameModeInternal(item.getGameMode());
@@ -227,7 +235,7 @@ public class KeyedVelocityTabList implements InternalTabList {
 
   void updateEntry(int action, TabListEntry entry) {
     if (entries.containsKey(entry.getProfile().getId())) {
-      LegacyPlayerListItem.Item packetItem = LegacyPlayerListItem.Item.from(entry);
+      LegacyPlayerListItemPacket.Item packetItem = LegacyPlayerListItemPacket.Item.from(entry);
 
       IdentifiedKey selectedKey = packetItem.getPlayerKey();
       Optional<Player> existing = proxyServer.getPlayer(entry.getProfile().getId());
@@ -236,14 +244,15 @@ public class KeyedVelocityTabList implements InternalTabList {
       }
 
       if (selectedKey != null
-          && selectedKey.getKeyRevision().getApplicableTo().contains(connection.getProtocolVersion())
+          && selectedKey.getKeyRevision().getApplicableTo()
+          .contains(connection.getProtocolVersion())
           && Objects.equals(selectedKey.getSignatureHolder(), entry.getProfile().getId())) {
         packetItem.setPlayerKey(selectedKey);
       } else {
         packetItem.setPlayerKey(null);
       }
 
-      connection.write(new LegacyPlayerListItem(action, Collections.singletonList(packetItem)));
+      connection.write(new LegacyPlayerListItemPacket(action, List.of(packetItem)));
     }
   }
 }
